fix: comprehensive SonarQube remediation — 57+ files across backend
- Extract 30+ duplicate string literals into named constants
- Java 17 pattern matching instanceof (~12 files)
- Java 17 enhanced switch expressions (~8 files)
- Cognitive complexity reduction: SecurityContext.hasPermission(), BudgetPlanningService.getDashboard(), AuthService login flow, LetterService templates
- N+1 query fixes: EmployeeDashboardService (30→1), CompensationService (4→1)
- Add missing @Slf4j annotations (6 files)
- Return immutable collections from public methods (5 files)
- Replace RuntimeException with IllegalArgumentException (23 occurrences)
- Remove unused imports/variables (~10 files)
- Extract magic number constants (tax rates, limits, bucket sizes)
- Fix empty catch blocks, variable shadowing, redundant @Transactional
- Fix divide() ArithmeticException in BenefitEnhancedService
- Replace generic RuntimeException with CircuitBreakerOpenException
- Extract GlobalExceptionHandler.extractPath() helper (used 17x)